# CRM_BE

./: CMakeLists.txt  Dockerfile  Makefile  README.md  auth.go  clients.go  dashboards.go  docker-compose.yml  employees.go  equipment.go  main.go  openapi.yaml  profile.go  rate_limiter.go  references.go  session.go  sites.go  telegram_logger.go  tickets.go  utils.go  Архитектура.drawio  Схема БД.drawio
config/: config.json
db_structure/: AuthDB.sql
migrations/: 00004_schema.sql  00005_ref_seed.sql  00006_auth_schema.sql  00007_auth_seed.sql  auth.sql.reference  full_db.sql
src/: main.cpp
src/drogon_gen/JsonTest/: JsonTestCtrl.cc
src/drogon_gen/RestTest/: RestTestCtrl.cc  RestTestCtrl.h
src/drogon_gen/handlers/Auth/: Auth.cc
src/drogon_gen/handlers/JsonTest/: JsonTestCtrl.h
src/drogon_gen/handlers/Test/: TestCtrl.cc  TestCtrl.h
src/drogon_gen/models/: model.json
